syntax = "proto3";

package proto;

// ------------------- Base -------------------

message UserMeta {}

message UserError {
  int32 code = 1;
  string message = 2;
}

// ------------------- Users -------------------

service UserService {
	rpc Get(UserGetRequest) returns (UserGetResponse) {}
	rpc GetByEmail(UserGetByEmailRequest) returns (UserGetByEmailResponse) {}
  rpc Create(UserCreateRequest) returns (UserCreateResponse) {}
	rpc VerifyPassword(UserVerifyPasswordRequest) returns (UserVerifyPasswordResponse)  {}
  rpc List(UserListRequest) returns (UserListResponse) {}

  //
  // TODO(ca): below methods are not implemented.
  //
  // rpc Update(UpdateRequest) returns (UpdateResponse) {}
  // rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message User {
	string id = 1;
	string email = 2;
	string name = 3;
	string password = 4;

	int64 created_at = 5;
	int64 updated_at = 6;
}

message UserGetRequest {
	string user_id = 1;
}

message UserGetResponse {
  User data = 1;
  UserMeta meta = 2;
  UserError error = 3;
}

message UserGetByEmailRequest {
	string email = 1;
}

message UserGetByEmailResponse {
  User data = 1;
  UserMeta meta = 2;
  UserError error = 3;
}

message UserCreateRequest {
  User data = 1;
}

message UserCreateResponse {
  User data = 1;
  UserMeta meta = 2;
  UserError error = 3;
}

message UserVerifyPasswordRequest {
	string email = 1;
	string password = 2;
}

message UserVerifyPasswordResponse {
  bool valid = 1;
  UserError error = 2;
}

message UserListRequest {}

message UserListResponse {
  repeated User data = 1;
  UserMeta meta = 2;
  UserError error = 3;
}
